# ezTrack

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  lint.yml  testandcov.yml
eztrack/: __init__.py  analyze.py  batch.py  config.py  interactive.py  io.py  location.py  playback.py  regions.py  roi.py  scale.py  summary.py  tracking.py  video.py  viz.py
eztrack/cli/: __init__.py  _common.py  notebooks.py
eztrack/notebooks/: LocationTracking_BatchProcess.ipynb  LocationTracking_Individual.ipynb  __init__.py
tests/: conftest.py  test_batch.py  test_config.py  test_integration.py  test_interactive.py  test_location.py  test_practice_video.py  test_regions.py  test_tracking_core.py  test_viz_playback.py
